test-suite/output/ssr_error_multiple_intro_after_case.out
File "./output/ssr_error_multiple_intro_after_case.v", line 3, characters 0-11:
Error: x already used

