test-suite/output/ssr_error_multiple_intro_after_case.v
Require Import ssreflect.
Goal forall p : nat * nat , True.
Fail case => x x.
Abort.
